--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -53,6 +53,7 @@ nav {
 .nav-title {
     font-weight: 800;
     font-size: 45px;
+    margin-left: 180px;
 }
 
 
@@ -160,4 +161,32 @@ main section {
     padding: 30px;
     border-radius: 5px;
     box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+
+/* My education & My experience style */
+
+.resume-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 24px;
+}
+
+.experience-sub-title {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+.experience-description,
+.experience-sub-title {
+    color: #757575;
+}
+
+.resume hr {
+    margin: 30px 5px;
+}
+
+.resume-download-cv {
+    margin-top: 50px;
 }
